--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,6 @@
 platform = espressif32
 board = super_mini_esp32c3
 framework = arduino
-;lib_ldf_mode = deep+
 lib_deps = 
 	mikalhart/TinyGPSPlus@^1.1.0
-	h2zero/NimBLE-Arduino@^2.2.1
+	bblanchon/ArduinoJson@^7.3.1
